# Job-Application-Multi-Agent-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.en.md  README.md  alembic.ini  pyproject.toml  state.db
.github/workflows/: daily-run.yml
alembic/: env.py
alembic/versions/: a43f01eac7cb_initial_v1.py  bf4995253e8d_add_razon_descarte_to_offers.py  c2d3e4f5a6b7_add_research_ttl_to_companies.py  d1e2f3a4b5c6_phase7_schema.py  e3f4a5b6c7d8_offer_composite_unique.py
api/: README.md  deps.py  main.py  schemas.py
api/routers/: drafts.py  history.py  offers.py  profile.py  users.py
config/users/: jorge.yaml.example  madalina.yaml.example
dashboard/: README.md
docs/: architecture.en.md  architecture.md  eval-baseline.md  operations.md  pre-phase-11-checklist.md
docs/examples/: 01-ml-engineer-neuralforge.md  02-data-scientist-helios.md  03-needs-manual-context.md
scripts/: build_eval_dataset.py  langfuse_smoke.py  run_eval.py  sync_data_branch.sh
src/: __init__.py  cli.py  config.py  exceptions.py  logging_setup.py  orchestrator.py
src/agents/: application_writer.py  company_researcher.py  offer_filter.py  viability_evaluator.py
src/db/: __init__.py  base.py  enums.py  models.py
src/graph/: __init__.py  build.py  evals.py  observability.py  state.py
src/models/: __init__.py  company.py  decisions.py  draft.py  evaluation.py  fit.py  job_offer.py  search.py  user_profile.py
src/prompts/: application_writer.system.md  application_writer.user.md  company_researcher.system.md  company_researcher.user.md  (+16 more)
tasks/: README.md
(+216 files in other folders)
